# backstage-plugin-techdocs-addon-frontmatter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.d.ts  package.json  tsconfig.json
.github/: copilot-instructions.md  release-drafter.yml
.github/workflows/: ci.yml  publish.yml
dev/: index.tsx
mkdocs-extension/: Dockerfile  LICENSE  README.md  pyproject.toml
mkdocs-extension/src/mkdocs_techdocs_frontmatter/: __init__.py  plugin.py
sampledocs/: mkdocs.yml
sampledocs/docs/: how-to.md  index.md
src/: alpha.ts  index.ts  plugin.ts
src/Frontmatter/: Frontmatter.tsx  index.ts  props.ts  utils.test.ts  utils.ts
